fixed img break in contact section

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -14,19 +14,10 @@
         overflow: hidden;
         width: 100%;
         height: 100%;
+        flex-wrap: wrap;
 
         @include mobile {
             flex: 0;
-        }
-
-        img {
-            height: 100%;
-            margin: 0px -250px;
-
-            @include mobile {
-                display: none;
-            }
-
         }
     }
 
